pkg/lang/testdata/ub/config/invalid/state-bare-ident-value.ub
state: {
  @backend: s3
  bucket:   cloudboss
}
